# portfolio

./: .gitignore  AGENTS.md  Makefile  README.md  roadmap.md
.github/: deploy-trigger.txt
.github/workflows/: backend-ci.yml  deploy-pages.yml  pages.yml
backend/: .coverage  pyproject.toml  railway.json
backend/app/: __main__.py  config.py  main.py  models.py
backend/app/routers/: blog.py  contact.py  github.py  projects.py  resume.py  uploads.py
backend/app/services/: cache.py  resume_parser.py
backend/app/utils/: __init__.py  ingredient_format.py
backend/tests/: test_blog.py  test_cache.py  test_ingredient_format.py
frontend/: index.html  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json  vite.config.ts
frontend/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  export-detail.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
frontend/.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo  config.json
frontend/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json
frontend/.next/types/: routes.d.ts  validator.ts
frontend/app/: LayoutClient.tsx  globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/app/about/: page.tsx
frontend/app/blog/: ImageInsertModal.tsx  layout.tsx  page.tsx
frontend/components/: FoodQuoteLoader.tsx
frontend/lib/: api.ts  food-quotes.ts
frontend/src/: styles.css
(+107 files in other folders)
